tests/samples/invalid/constant_evaluated_member_access.pn

struct Foo
{
	x: i32,
}

const FOO: Foo = Foo { x: 100 };
const X: i32 = FOO.x;
